<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="emergency_stop">Emergency Stop</string>
    <string name="cancel_print">Cancel Print</string>
    <string name="estimation">Estimation</string>
    <string name="time_left">Time left</string>
    <string name="time_spent">Time spent</string>
    <string name="progress">Progress</string>
    <string name="x_percent">%.0f %%</string>
    <string name="x_percent_int">%d %%</string>
    <string name="change_filament_confirmation_message">Do you want to change the filament?</string>
    <string name="change_filament_confirmation_action">Change filament</string>
    <string name="pause_print_confirmation_message">Do you want to pause the print?</string>
    <string name="pause_print_confirmation_action">Pause print</string>
    <string name="resume_print_confirmation_message">Do you want to resume the print?</string>
    <string name="resume_print_confirmation_action">Resume print</string>
    <string name="cancel_print_confirmation_message">Do you want to cancel the print?</string>
    <string name="cancel_print_confirmation_action">Cancel print</string>
    <string name="emergency_stop_confirmation_message">Do you want to emergency stop the printer?</string>
    <string name="emergency_stop_confirmation_action">Emergency stop</string>
    <string name="resume">Resume</string>
    <string name="pausing">Pausing…</string>
    <string name="cancelling">Cancelling…</string>
    <string name="pause">Pause</string>
    <string name="eta">ETA</string>
    <string name="print_name">Print name</string>
    <string name="tune">Tune</string>
    <string name="cd_feed_rate">Feed rate</string>
    <string name="cd_flow_rate">Flow rate</string>
    <string name="cd_fan_speed">Fan speed</string>
    <string name="why_are_the_values_not_always_shown">Why are the values not always shown?</string>
    <string name="octoprint_can_t_query_fan_speed_and_rates_values_can_only_be_shown_if_changes_are_witnessed">OctoPrint can\'t query fan speed and rates. Values can only be shown if changes are witnessed.</string>
    <string name="understood">Understood</string>
    <string name="apply">Apply</string>
    <string name="fan_speed_label_active">Fan speed from 0 to 100</string>
    <string name="fan_speed_label">Fan Speed (%)</string>
    <string name="flow_rate_label_active">Flow rate as number (100 is default)</string>
    <string name="flow_rate_label">Flow Rate (%)</string>
    <string name="feed_rate_label_active">Feed rate as number (100 is default)</string>
    <string name="feed_rate_label">Feed Rate (%)</string>
</resources>