<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/progressBarBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_3"
        android:background="@drawable/bg_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/progressBarFill"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_prorgess"
        android:backgroundTint="?android:attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProgressPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_1"
        android:paddingEnd="@dimen/margin_1"
        android:textAppearance="@style/OctoTheme.TextAppearance.SectionHeader"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarBackground"
        app:layout_constraintEnd_toEndOf="@+id/progressBarBackground"
        app:layout_constraintStart_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="20%"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewPrintNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_2"
        android:text="@string/print_name"
        android:textColor="@color/dark_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarBackground" />

    <TextView
        android:id="@+id/textViewPrintName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_2"
        android:visibility="invisible"
        android:ellipsize="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/labelBarrier"
        app:layout_constraintTop_toBottomOf="@+id/progressBarBackground"
        tools:text="This is a long name\nsdfidfjosdofijo"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewTimeSpentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:text="@string/time_spent"
        android:layout_marginTop="@dimen/margin_0"
        android:textColor="@color/dark_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrintName" />

    <TextView
        android:id="@+id/textViewTimeSpent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:ellipsize="middle"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/labelBarrier"
        app:layout_constraintTop_toTopOf="@+id/textViewTimeSpentLabel"
        tools:text="2:45 h\nusifh"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewTimeLeftLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_0"
        android:text="@string/time_left"
        android:textColor="@color/dark_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimeSpent" />

    <TextView
        android:id="@+id/textViewTimeLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:ellipsize="middle"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/labelBarrier"
        app:layout_constraintTop_toTopOf="@id/textViewTimeLeftLabel"
        tools:text="32 min\ndsifj"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewEtaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_0"
        android:text="@string/eta"
        android:textColor="@color/dark_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimeLeft" />

    <TextView
        android:id="@+id/textVieEta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/labelBarrier"
        app:layout_constraintTop_toTopOf="@+id/textViewEtaLabel"
        tools:text="32 min\nsuri"
        tools:visibility="visible" />

    <View
        android:id="@+id/estimationIndicator"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="6dp"
        android:background="@drawable/bg_circle"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@+id/textVieEta"
        app:layout_constraintTop_toTopOf="@+id/textVieEta"
        tools:backgroundTint="#f00"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelBarrier"
        android:layout_width="6dp"
        android:layout_height="6dp"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textViewPrintNameLabel,textViewTimeSpentLabel,textViewEtaLabel,textViewTimeLeftLabel"
        tools:layout_editor_absoluteX="393dp" />

</androidx.constraintlayout.widget.ConstraintLayout>