<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/progressBarBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_3"
        android:background="@drawable/bg_input"
        android:backgroundTint="@color/progress_bar_track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/progressBarFill"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_prorgess"
        android:backgroundTint="?android:attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBarBackground" />

    <View
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBarBackground" />

    <TextView
        android:id="@+id/textViewProgressPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_1"
        android:paddingEnd="@dimen/margin_1"
        android:textAppearance="@style/OctoTheme.TextAppearance.SectionHeader"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarBackground"
        app:layout_constraintEnd_toEndOf="@+id/progressBarBackground"
        app:layout_constraintStart_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="20%"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewPrintNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/margin_1"
        android:text="@string/print_name"
        android:textColor="@color/dark_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVieEta" />

    <TextView
        android:id="@+id/textViewPrintName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_2"
        android:ellipsize="end"
        android:maxLines="2"
        android:textAppearance="@style/OctoTheme.TextAppearance.Data"
        android:visibility="invisible"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewPrintNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrintNameLabel"
        tools:text="This is a long filename"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewTimeSpentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_spent"
        android:textColor="@color/dark_text"
        app:layout_constraintStart_toStartOf="@+id/textViewTimeSpent"
        app:layout_constraintTop_toTopOf="@+id/textViewEtaLabel" />

    <TextView
        android:id="@+id/textViewTimeLeftLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_left"
        android:textColor="@color/dark_text"
        app:layout_constraintStart_toStartOf="@+id/textViewTimeLeft"
        app:layout_constraintTop_toTopOf="@+id/textViewEtaLabel" />

    <TextView
        android:id="@+id/textViewEtaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_1"
        android:text="@string/eta"
        android:textColor="@color/dark_text"
        app:layout_constraintStart_toStartOf="@+id/textVieEta"
        app:layout_constraintTop_toBottomOf="@+id/progressBarBackground" />

    <TextView
        android:id="@+id/textVieEta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"
        android:maxLines="1"
        android:textAppearance="@style/OctoTheme.TextAppearance.Data"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/textViewTimeSpent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEtaLabel"
        app:layout_constraintWidth_default="wrap"
        tools:text="20.12., 08:45 PM"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewTimeSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="middle"
        android:textAppearance="@style/OctoTheme.TextAppearance.Data"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/textViewTimeLeft"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textVieEta"
        app:layout_constraintTop_toTopOf="@+id/textVieEta"
        tools:text="32:45 h"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewTimeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"
        android:ellipsize="middle"
        android:textAppearance="@style/OctoTheme.TextAppearance.Data"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewTimeSpent"
        app:layout_constraintTop_toTopOf="@+id/textVieEta"
        tools:text="32:45 h"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/estimationIndicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_0"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_round_star_18"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEtaLabel"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@+id/textViewEtaLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewEtaLabel"
        tools:tint="#f00"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>